--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <a href="#"><img src="images/logo.png" alt="멀티디자인로고"></a>
             </h1>
             <div class="membership">
-                <a href="/login.html">로그인</a>
-                <a href="/join.html">회원가입</a>
+                <a href="./login.html">로그인</a>
+                <a href="./join.html">회원가입</a>
             </div>
             <nav id="nav">
                 <ul class="depth1">
