--- a/login.html
+++ b/login.html
@@ -20,11 +20,11 @@
     <header id="header">
         <div class="inner cf">
             <h1>
-                <a href="/index.html"><img src="images/logo.png" alt="멀티디자인로고"></a>
+                <a href="./index.html"><img src="images/logo.png" alt="멀티디자인로고"></a>
             </h1>
             <div class="membership">
-                <a href="/login.html">로그인</a>
-                <a href="/join.html">회원가입</a>
+                <a href="./login.html">로그인</a>
+                <a href="./join.html">회원가입</a>
             </div>
             <nav id="nav">
                 <ul class="depth1">
@@ -78,7 +78,7 @@
                 </form>
             </div>
             <div id="signfind">
-                <a href="/join.html">회원가입</a>
+                <a href="./join.html">회원가입</a>
                 <a href="#">아이디 찾기</a>
                 <a href="#">비밀번호 찾기</a>
             </div>  
